# treble

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt  call_overheads.cu
examples/: CMakeLists.txt  basic_example.cpp  cuda_example.cu
include/treble/: detail.hpp  param.hpp  scoped_timer.hpp  self_tuning_function.hpp  treble.hpp
include/treble/optimizers/: compass_search.hpp  incremental_sub_gradient.hpp  optimizers.hpp
include/treble/probes/: probes.hpp
